[tool.poetry]
name = "example-project"
version = "0.1.0"
description = ""
authors = ["pacho-h <pacho.h90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
ruff = "^0.1.15"
pytest = "^8.0.0"
pytest-watcher = "^0.3.5"
pynvim = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN",
    "D",
    "DTZ005",
    "EM101", "EM102",
    "FA",
    "FIX002",
    "PLR0913",
    "PLR2004",
    "S101",
    "TD",
    "TRY",
]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "type"]
